working towards first draft

--- a/Phd_thesis/formal/acknowledgments.tex
+++ b/Phd_thesis/formal/acknowledgments.tex
@@ -8,17 +8,19 @@
 
 % A special thank you to Mohit Mehndiratta—although we have never met in person, he has felt like both a mentor and a friend to me since the very beginning of my academic journey.
 
+% I would like to thank Dr. Andriy for the time we spent together, for the scientific discussions that challenged and enriched me, and for his unwavering support.
+
 % I would also like to thank Weisheng Liang for the wonderful time we shared during his visit to Aarhus, for the collaboration we had together, and for everything I learned from working with him.
 
 % A heartfelt thank you to Dr. Bilal Wehbe, who was always there to help and support me during my visit to DFKI. I am grateful for the collaboration and friendship we built during that time.
 
 % I am thankful to my colleagues at the AIRLab for their friendship and for the many things I learned from them. I also appreciate the supportive environment and camaraderie I experienced with my colleagues at EIVA.
 
-% To Jonas Le Fevre, thank you for making the thesis writing process enjoyable and collaborative. Working side by side with you turned a challenging task into a shared creative experience, and your feedback on my thesis has been invaluable.
+% I would like to Thank Jonas Le Fevre, thank you for making the thesis writing process enjoyable and collaborative. Working side by side with you turned a challenging task into a shared creative experience, and your feedback on my thesis has been invaluable. Also I would like to thank him for his help with danish translation of the thesis summary. 
 
-% I would also like to thank my students—David, Aske, Frederik, and Andreas—for their valuable contributions and dedication throughout their thesis projects with me.
 
-% Finally, I would like to thank Dr. Andriy for the time we spent together, for the scientific discussions that challenged and enriched me, and for his unwavering support.
+
+
 
 
 % \vspace{-0.5cm} % Move table up on the page
