--- a/Phd_thesis/main.tex
+++ b/Phd_thesis/main.tex
@@ -273,7 +273,7 @@ Path Planning for Tethered Underwater Vehicles}
 \HRule \\[0.4cm] % Horizontal line
 {\huge \bfseries Autonomous Marine Robots Optimal Control and Path Planning with Data-Driven Models
 \par}\vspace{0.4cm} % Thesis title
-\HRule \\[1.5cm] % Horizontal line
+\HRule \\[1.5cm] % Horizontal line  
 
 \emph{Author:}
 {Abdelhakim Khaled Amer} % Author name - remove the \href bracket to remove the link
@@ -502,27 +502,27 @@ Finlandsgade 22 \\
  \label{partII:paper}
 
 
-\chapter*{Paper I: UNav-Sim – A High-Fidelity Underwater Robotics Simulator}
-\addcontentsline{toc}{chapter}{Paper I: UNav-Sim}
+
+\chapter{UNav-Sim – A High-Fidelity Underwater Robotics Simulator}
+%\addcontentsline{toc}{chapter}{Paper I: UNav-Sim – A High-Fidelity Underwater Robotics Simulator}
 \vspace{1cm}
 This paper was published at the \textbf{International Conference on Advanced Robotics (ICAR), 2023}.
  \input{Phd_thesis/chapters/3.Papers/1.paper1_unavsim/ICAR_2023_Hakim_1/paper1_unavsim}
 
-%\includepdf[pages=-,pagecommand={},width=\textwidth]%{chapters/3.Papers/1.paper1_unavsim/ICAR_2023_Hakim_1/ICAR_2023_Hakim.pdf}
 
 
-\chapter*{Paper II: REACT: Real-time Entanglement-Aware Coverage
+\chapter{REACT: Real-time Entanglement-Aware Coverage
 Path Planning for Tethered Underwater Vehicles}
-\addcontentsline{toc}{chapter}{Paper II: Visual Tracking Nonlinear Model Predictive Control Method for Autonomous Wind Turbine Inspection}
+%\addcontentsline{toc}{chapter}{Paper II: REACT: Real-time Entanglement-Aware Coverage Path Planning for Tethered Underwater Vehicles}
 \vspace{1cm}
 This paper was submitted to the \textbf{Transactions on Field Robotics}.
  \input{Phd_thesis/chapters/3.Papers/5.paper5_eaplanner/EA-Planner/paper_eaplanner}
 
 
 
-\chapter*{Paper III: Visual Tracking Nonlinear Model Predictive Control Method for
+\chapter{Visual Tracking Nonlinear Model Predictive Control Method for
 Autonomous Wind Turbine Inspection}
-\addcontentsline{toc}{chapter}{Paper II: VTNMPC}
+%\addcontentsline{toc}{chapter}{Paper III: Visual Tracking Nonlinear Model Predictive Control Method for Autonomous Wind Turbine Inspection}
 \vspace{1cm}
 This paper was published at the \textbf{International Conference on Advanced Robotics (ICAR), 2023}.
 
@@ -531,76 +531,22 @@ This paper was published at the \textbf{International Conference on Advanced Rob
 
 
 
-\chapter*{Paper III: Modelling of Underwater Vehicles using
+\chapter{Modelling of Underwater Vehicles using
 Physics-Informed Neural Networks with Control}
-\addcontentsline{toc}{chapter}{Paper III:  PINNS}
+%\addcontentsline{toc}{chapter}{Paper IV:  Modelling of Underwater Vehicles using Physics-Informed Neural Networks with Control}
 \vspace{1cm}
 This paper was published at the \textbf{International Joint Conference on Neural Networks (IJCNN), 2025}.
 
 \input{Phd_thesis/chapters/3.Papers/3.paper3_pinc/IJCNN_2025/paper_pinc}
 
-%\includepdf[pages=-,pagecommand={},width=\textwidth]{chapters/3.Papers/3.paper3_pinc/pinc.pdf}
 
 
-\chapter*{Paper V: Empowering Autonomous Underwater Vehicles Using Learning-Based Model
-Predictive Control With Dynamic Forgetting Gaussian Processes}
-\addcontentsline{toc}{chapter}{Paper III: DFGP}
+\chapter{Empowering Autonomous Underwater Vehicles Using Learning-Based Model Predictive Control With Dynamic Forgetting Gaussian Processes}
+%\addcontentsline{toc}{chapter}{Paper V: Empowering Autonomous Underwater Vehicles Using Learning-Based Model Predictive Control With Dynamic Forgetting Gaussian Processes}
 \vspace{1cm}
 This paper was published at the \textbf{IEEE Transactions on Control Systems Technology (TCST)}.
 
 \input{Phd_thesis/chapters/3.Papers/4.paper4_dfgp/Cont_Syst_Tech_Hakim/TCST/paper4_dfgp}
-%\includepdf[pages=-,pagecommand={},width=\textwidth]{chapters/3.Papers/4.paper4_dfgp/dfgp.pdf}
-
-
-
-
-% \input{chapters/2.Data_Simulator/RelatedWorks}
-% \input{chapters/2.Data_Simulator/DatasetMetrics}
-% \input{chapters/2.Data_Simulator/paper2} \cleardoublepage  % MIMIR%%
-% % % \input{chapters/2.Data_Simulator/paper5} \cleardoublepage  % UNAVSim
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \part*{Part III: Optimal Control for Coverage Path Planning }
-% \addcontentsline{toc}{part}{Part III: Architectures for Learning-based Localization}
-% \label{partIII:architectures}
-
-% \input{chapters/3.Architectures/Intro}
-% \label{chapter:3:architectures:intro}
-% \input{chapters/3.Architectures/geometry}
-% \label{chapter:3:architectures:geometry}
-% \input{chapters/3.Architectures/groups}
-% \label{chapter:3:architectures:groups}
-
-% \input{chapters/3.Architectures/paper3} 
-% \cleardoublepage  % Loss it right
-% \label{chapter:3:architectures:lossright}
-
-% \input{chapters/3.Architectures/paper7} \cleardoublepage  % Regress right
-% \label{chapter:3:architectures:regressright}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\part*{Part IV: Data-Driven Modelling}
-%\addcontentsline{toc}{part}{Part IV: Applications and Alternative Vision Paradigms}
-%\label{partiv:applications}
-
-%\input{chapters/4.Other/Intro}
-%\input{chapters/4.Other/paper6} \cleardoublepage  % BT
-%\input{chapters/4.Other/paper8} % Event
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%part*{Part V: Final Remarks}
-%\addcontentsline{toc}{part}{Part V: Final Remarks}
-%\label{partv:final}
-%\input{chapters/conclusions}
-
-
-% \input{chapters/epilogue}
-
-% \input{chapters/conclusions} \cleardoublepage
-% \input{chapters/epilogue} \cleardoublepage
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
